objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Total_List_Price__c</fullName>
        <description>CAN BE REMOVED. All it does now is regurgitate List_Price_Formula__c. Just need to replace wherever it is called.</description>
        <formula>List_Price_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>List_Price_Formula__c</inlineHelpText>
        <label>Total List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Training_Flow_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A hidden checkbox to indicate that this product has had a Training record generated for it. Used by reporting and Flow.</description>
        <label>Training Flow-Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPriceChange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UserPriceChange</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VS_List_Price__c</fullName>
        <formula>List_Price_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Internal field used to store List Price without 2 digit decimals - List_Price_Formula__c</inlineHelpText>
        <label>VS List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VS_Quantity__c</fullName>
        <formula>Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>reads the existing quantity field</inlineHelpText>
        <label>VS Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VS_Sale_Price__c</fullName>
        <formula>UnitPrice*Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>UnitPrice*Quantity</inlineHelpText>
        <label>VS Sale Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VS_Total_Price__c</fullName>
        <formula>TotalPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>reads the Total Price field</inlineHelpText>
        <label>VS Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ValidationRules__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to bypass validation rules in unit tests.</description>
        <label>ValidationRules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Goal__c</fullName>
        <formula>IF(Goal_Price__c = 0, 0, TotalPrice  /  Goal_Price__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>IF(Goal_Price__c = 0, 0, TotalPrice  /  Goal_Price__c)</inlineHelpText>
        <label>% of Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_List__c</fullName>
        <formula>IF(List_Price_Formula__c = 0, 0, TotalPrice /  List_Price_Formula__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>IF(List_Price_Formula__c = 0, 0, TotalPrice /  List_Price_Formula__c)</inlineHelpText>
        <label>% of List</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>requiresWelcomePacket__c</fullName>
        <formula>IF( PricebookEntry.Product2.requiresWelcomePacket__c , &quot;True&quot;, &quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>requiresWelcomePacket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tinderbox__Include_Content__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked it will include the associated TinderBox content for this product.</description>
        <label>Include Content</label>
        <type>Checkbox</type>
    </fields>
    <validationRules>
        <fullName>Auto_Red_Wagon</fullName>
        <active>true</active>
        <description>verify opportunity is for Red Wagon</description>
        <errorConditionFormula>(ISPICKVAL(Opportunity.Type,&quot;Account Setup&quot; )  || ISPICKVAL(Opportunity.Type,&quot;Book&quot; )  || ISPICKVAL(Opportunity.Type,&quot;Module&quot; ) || ISPICKVAL(Opportunity.Type,&quot;Trial&quot; ) || ISPICKVAL(Opportunity.Type,&quot;Window Stickers&quot; ) || ISPICKVAL(Opportunity.Type,&quot;Real Deal&quot; )) &amp;&amp; ( Product2.Name = &quot;Red Wagon&quot;)</errorConditionFormula>
        <errorMessage>Red Wagon needs to be in a separate opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CannotCreateVinDIWithoutFlow</fullName>
        <active>true</active>
        <errorConditionFormula>!CONTAINS(Opportunity.RecordType.Name, &quot;vAuto&quot;) &amp;&amp;
BEGINS(Product2.Name, &quot;Data Integration&quot;) &amp;&amp; 
Generated_by_Product_Flow__c = FALSE &amp;&amp; 
ISNEW() &amp;&amp;
$Setup.Master_Switches__c.Validation_Rules__c = TRUE</errorConditionFormula>
        <errorMessage>Please use the &quot;Add Data Integration&quot; button to create Data Integration products.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Add_Products_if_Opp_is_Closed</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW() &amp;&amp;
Opportunity.IsClosed = TRUE &amp;&amp;
!CONTAINS(LOWER($Profile.Name),&quot;admin&quot;) &amp;&amp;
$User.Alias != &quot;elern&quot; &amp;&amp; /*Elliot Lerner*/
$User.Alias != &quot;dglif&quot; &amp;&amp; /*Debbie Gliffe*/
$User.Alias != &quot;mdrin&quot; &amp;&amp; /*Jill Tyson*/
$User.Alias != &quot;jtyso&quot; /*Michelle Drinnan*/</errorConditionFormula>
        <errorMessage>You cannot add products to a closed opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Change_Price_When_Disabled</fullName>
        <active>true</active>
        <errorConditionFormula>PricebookEntry.Product2.Disable_Price_Change__c = TRUE &amp;&amp;
PricebookEntry.UnitPrice != UnitPrice &amp;&amp; 
!OR( 
   $User.Alias != &quot;muser&quot;, /*migration user*/
   $User.CommunityNickname != &quot;mark.ross&quot;,
   $User.CommunityNickname != &quot;Danielle.dennis&quot;
) &amp;&amp; 
ValidationRules__c = FALSE</errorConditionFormula>
        <errorDisplayField>UnitPrice</errorDisplayField>
        <errorMessage>This product is one that DOES NOT allow price differentiation. Please set the Sales Price back to its original value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Change_Pricing_if_Opp_is_Closed</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
   ISCHANGED(UnitPrice),
   ISCHANGED(Quantity),
   ISCHANGED(TNOPPST__LineTax__c)
) &amp;&amp;
Opportunity.IsClosed &amp;&amp;
!CONTAINS(LOWER($Profile.Name),&quot;admin&quot;) &amp;&amp;
$User.Alias != &quot;elern&quot; &amp;&amp; /*Elliot Lerner*/
$User.Alias != &quot;dglif&quot; &amp;&amp; /*Debbie Gliffe*/
$User.Alias != &quot;mdrin&quot; &amp;&amp; /*Jill Tyson*/
$User.Alias != &quot;jtyso&quot; /*Michelle Drinnan*/</errorConditionFormula>
        <errorMessage>You cannot change Products on a Closed Opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Change_Sales_Price</fullName>
        <active>false</active>
        <errorConditionFormula>!ISNEW() &amp;&amp;
!ValidationRules__c &amp;&amp;
ISCHANGED(UnitPrice) &amp;&amp; 
UserPriceChange__c = FALSE &amp;&amp; 
CONTAINS(Opportunity.Price_Book_Used__c,&quot;Standard&quot;) &amp;&amp;
ABS(UnitPrice-PRIORVALUE(UnitPrice)) &gt; 0.05 &amp;&amp;
NOT ( OR( 
$UserRole.DeveloperName = &quot;ProcessDevelopmentManager&quot;,
$UserRole.DeveloperName = &quot;SystemsAdministrator&quot;,
$UserRole.DeveloperName = &quot;CustomerServiceRepresentative&quot;,
$UserRole.DeveloperName = &quot;SalesforceDeveloper&quot;,
$UserRole.DeveloperName = &quot;AccountingSupport&quot;,
$UserRole.DeveloperName = &quot;Controller&quot;,
BEGINS($UserRole.DeveloperName, &quot;HY&quot;)
) )</errorConditionFormula>
        <errorMessage>You can only make a change up to .05 per product. Please use the Price Adjustment button to change the Sales Price of your products.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Conquest_Franchise_Make_And_Contact</fullName>
        <active>true</active>
        <description>This will make sure for conquest franchise product Make and contact are required.</description>
        <errorConditionFormula>Product2.Name == &quot;Conquest Franchise&quot; &amp;&amp;
(
   ISBLANK(TEXT(Make__c)) ||
   ISBLANK(Product_Contact__c)
) &amp;&amp;
$Setup.Master_Switches__c.Validation_Rules__c = TRUE</errorConditionFormula>
        <errorMessage>Conquest Franchise Line requires Make and Contact fields.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Is_New_and_Sales_Price_Changed</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW() &amp;&amp; 
UnitPrice*Quantity != List_Price_Formula__c &amp;&amp; 
Opportunity.Business_Unit__c = &quot;VinSolutions&quot; &amp;&amp;
UserPriceChange__c = FALSE</errorConditionFormula>
        <errorMessage>Please use the Price Adjustment button to change the Sales Price of your products.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Is_product_deposit</fullName>
        <active>true</active>
        <description>prevent users from adding deposit product as opp line tiems as they need to update the information on the opportunity</description>
        <errorConditionFormula>OR( Product_Name__c = &quot;30 Day Deposit&quot;, Product_Name__c = &quot;Deposit Conquest&quot;)</errorConditionFormula>
        <errorMessage>Deposit information is entered on the Opportunity not added as lines</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_Down_Package_Only_Products</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Source_Package_Product__c) &amp;&amp;
ISNEW() &amp;&amp;
OR(
   PricebookEntry.Product2.Name = &quot;CRM/ILM&quot;,
   PricebookEntry.Product2.Name = &quot;CRM/ILM Limited Users&quot;,
   PricebookEntry.Product2.Name = &quot;ILM&quot;,
   PricebookEntry.Product2.Name = &quot;ILM Integration&quot;,
   PricebookEntry.Product2.Name = &quot;Website - Vin Advanced&quot;,
   PricebookEntry.Product2.Name = &quot;Website - Vin Basic&quot;,
   PricebookEntry.Product2.Name = &quot;Website - Portal&quot;,
   PricebookEntry.Product2.Name = &quot;Website - Scion Only&quot;,
   PricebookEntry.Product2.Name = &quot;CRM Upgrade from ILM&quot;,
   PricebookEntry.Product2.Name = &quot;CRM Upgrade from ILM Limited Users&quot;,
   PricebookEntry.Product2.Name = &quot;Digital Marketing Advanced SEO&quot;,
   PricebookEntry.Product2.Name = &quot;Website - Vin Basic to Advanced Upgrade&quot;,
   PricebookEntry.Product2.Name = &quot;Kore360 Essential Website&quot;,
   PricebookEntry.Product2.Name = &quot;Kore360 Portal&quot;,
   PricebookEntry.Product2.Name = &quot;Kore360 Pro Website&quot;,
   PricebookEntry.Product2.Name = &quot;Kore360 Essential Website (Converted)&quot;,
   PricebookEntry.Product2.Name = &quot;Kore360 Pro Website (Converted)&quot;,
   PricebookEntry.Product2.Name = &quot;Vin Website Conversion - Essential&quot;,
   PricebookEntry.Product2.Name = &quot;Vin Website Conversion - Pro&quot;,
   PricebookEntry.Product2.Name = &quot;Lexus Kore360 Pro Website&quot;,
   PricebookEntry.Product2.Name = &quot;Mitsubishi Kore360 Pro Website&quot;,
   PricebookEntry.Product2.Name = &quot;Website - Premier Edition&quot;,
   PricebookEntry.Product2.Name = &quot;Website - Pro Edition&quot;,
   PricebookEntry.Product2.Name = &quot;Website - Standard Edition&quot;,
   PricebookEntry.Product2.Name = &quot;Website - Portal Pro&quot;,
   PricebookEntry.Product2.Name = &quot;Website - Portal Premier&quot;,
   PricebookEntry.Product2.Name = &quot;Website Optimization for Website - Premier&quot;,
   PricebookEntry.Product2.Name = &quot;Website Optimization Onetime Fee for Website - Premier&quot;
)</errorConditionFormula>
        <errorDisplayField>ActualDescription__c</errorDisplayField>
        <errorMessage>You have added a product that cannot be added without a package, like CRM/ILM or a Kore360 Website. Please add the appropriate package instead. It will be a similar name, but ending in the word &quot;Package&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Haystak_Selling_Vin_SEO</fullName>
        <active>true</active>
        <description>Prevents users with Haystak roles from selling Vin SEO products.</description>
        <errorConditionFormula>CONTAINS(Opportunity.Owner.UserRole.Name,&quot;HY &quot;) &amp;&amp;
CONTAINS(Product2.Name,&quot;SEO&quot;) &amp;&amp;
ISPICKVAL(Product2.Product_BU__c,&quot;VinSolutions&quot;)</errorConditionFormula>
        <errorMessage>You have included a Vin SEO product. As a Haystak employee, you must select a Haystak SEO product.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Vin_Cannot_Change_Sales_Price</fullName>
        <active>true</active>
        <errorConditionFormula>!ISNEW() &amp;&amp;
!ValidationRules__c &amp;&amp;
ISCHANGED(UnitPrice) &amp;&amp;
UserPriceChange__c = FALSE &amp;&amp;
CONTAINS(Opportunity.Price_Book_Used__c,&quot;Standard&quot;) &amp;&amp;
ABS(UnitPrice-PRIORVALUE(UnitPrice)) &gt; 0.05 &amp;&amp;
NOT ( OR(
$User.Id = &quot;00570000000njuz&quot;,
$UserRole.DeveloperName = &quot;ProcessDevelopmentManager&quot;,
$UserRole.DeveloperName = &quot;SystemsAdministrator&quot;,
$UserRole.DeveloperName = &quot;CustomerServiceRepresentative&quot;,
$UserRole.DeveloperName = &quot;SalesforceDeveloper&quot;,
$UserRole.DeveloperName = &quot;AccountingSupport&quot;,
$UserRole.DeveloperName = &quot;Controller&quot;,
$UserRole.DeveloperName = &quot;DirectorofSales&quot;,
$UserRole.DeveloperName = &quot;Vin_Sr_Manager_of_Inside_Sales&quot;,
$UserRole.DeveloperName = &quot;DirectorofInsideSales&quot;,
$UserRole.DeveloperName = &quot;Vin_Sr_Manager_of_Outside_Sales&quot;,
BEGINS($UserRole.DeveloperName, &quot;HY&quot;)
) )</errorConditionFormula>
        <errorMessage>You can only make a change up to .05 per product. Please use the Price Adjustment button to change the Sales Price of your products.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Vin_Is_New_and_Sales_Price_Changed</fullName>
        <active>true</active>
        <errorConditionFormula>Business_Unit__c = &quot;VinSolutions&quot; &amp;&amp;
ISNEW() &amp;&amp; 
UnitPrice*Quantity != List_Price_Formula__c &amp;&amp; 
UserPriceChange__c = FALSE</errorConditionFormula>
        <errorMessage>Please use the Price Adjustment button to change the Sales Price of your products.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vAuto_AG_module_Add</fullName>
        <active>true</active>
        <description>verify opportunity for Auction Genius</description>
        <errorConditionFormula>(ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Account Setup&quot; )  || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Book&quot; )   || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Account Setup&quot; )   || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Listings/Photos/Syndication&quot; )   || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Module&quot; )   || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Real Deal&quot; )  ||    ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Trial&quot; )  || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Red Wagon&quot; )   || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;TIM - No Training&quot; )  || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;TIM - With Training&quot; )   || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Window Stickers&quot; )) &amp;&amp; (  BEGINS (Product2.Name, &quot;Auction Genius&quot;))</errorConditionFormula>
        <errorMessage>Auction Genius needs to be in a separate Auction Genius opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vAuto_AG_module_Add_only_validation</fullName>
        <active>true</active>
        <description>verify opportunity for Auction Genius</description>
        <errorConditionFormula>(ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Auction Genius&quot; )   &amp;&amp; (NOT( BEGINS (Product2.Name, &quot;Auction Genius&quot;))&amp;&amp; NOT( BEGINS (Product2.Name, &quot;PriceGuide&quot;)) ))</errorConditionFormula>
        <errorMessage>Only Auction Genius products can be in Auction Genius opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vAuto_AV_module_Add</fullName>
        <active>true</active>
        <description>verify opportunity for AutoVisor</description>
        <errorConditionFormula>(ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Account Setup&quot; )  || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Book&quot; )   || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Account Setup&quot; )   || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Auction Genius&quot; )  || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Listings/Photos/Syndication&quot; )   || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Module&quot; )   || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Real Deal&quot; )  ||     ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Red Wagon&quot; )   || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;TIM - No Training&quot; )  || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;TIM - With Training&quot; )   || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Window Stickers&quot; )) &amp;&amp; (  BEGINS (Product2.Name, &quot;AutoVisor&quot;))</errorConditionFormula>
        <errorMessage>AuctionVisor needs to be in a separate AutoVisor opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vAuto_AV_module_Add_only_validation</fullName>
        <active>true</active>
        <description>verify opportunity for Auction Genius</description>
        <errorConditionFormula>((ISPICKVAL(Opportunity.Type,&quot;AutoVisor - Existing Provision Client&quot; )  || ISPICKVAL(Opportunity.Type,&quot;AutoVisor - New Provision Client&quot; ) || ISPICKVAL(Opportunity.Type,&quot;AutoVisor - Stand Alone&quot; ) )    &amp;&amp; (NOT( BEGINS (Product2.Name, &quot;AutoVisor&quot;)) &amp;&amp; NOT( BEGINS (Product2.Name, &quot;AutoWriter&quot;)) &amp;&amp; NOT( BEGINS (Product2.Name, &quot;PriceGuide&quot;))   ))</errorConditionFormula>
        <errorMessage>Only AutoVisor (along with AutoWriter) can be in AutoVisor opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vAuto_Conquest_Cannot_Enter_Make</fullName>
        <active>false</active>
        <description>You cannot enter a make for non &quot;Conquest Franchise&quot; Products</description>
        <errorConditionFormula>AND( 
   (Product2Id &lt;&gt; &apos;01t80000003S6Ra&apos;),
   (NOT(ISPICKVAL(Make__c, &quot;&quot;)))
)</errorConditionFormula>
        <errorDisplayField>ActualDescription__c</errorDisplayField>
        <errorMessage>You cannot enter a make for this product.  You can only enter a Make for &quot;Conquest Franchise&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vAuto_Conquest_Franchise_NotEqualTo_1</fullName>
        <active>true</active>
        <description>Conquest Franchise can only be one at a time</description>
        <errorConditionFormula>AND( 
   (Product2Id = &apos;01t80000003S6Ra&apos;),
   ( Quantity &lt;&gt; 1 )
)</errorConditionFormula>
        <errorDisplayField>Quantity</errorDisplayField>
        <errorMessage>You can only enter one Conquest Franchise at a time.  Please select 1, and choose make, then re-add extra Conquest Makes to this Opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vAuto_Conquest_Must_be_in_Separate_Oppty</fullName>
        <active>true</active>
        <description>Verify opportunity is for Conquest only</description>
        <errorConditionFormula>(ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Account Setup&quot; )  || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Auction Genius - Stand Alone&quot; )  || 
ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Auction Genius - With Provision Client&quot; )  ||
ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Autovisor - Stand Alone&quot; )  || 
ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Autovisor - With Provision Client&quot; )  ||
ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Book&quot; )  ||  
ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Module&quot; ) || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Trial&quot; ) || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;TIM - With Training&quot; )|| ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;TIM - No Training&quot; ) || 
ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Real Deal&quot; )  || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Window Stickers&quot; )) 

&amp;&amp; (CONTAINS(Product2.Name,&quot;Conquest&quot;))</errorConditionFormula>
        <errorMessage>Conquest Products need to be in a separate opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vAuto_Listing_Photos_Syndication</fullName>
        <active>true</active>
        <description>verify opportunity is for Listing/Photos/Syndication</description>
        <errorConditionFormula>Product2.Name = &quot;Listings/Photos/Syndication&quot; &amp;&amp; !ISPICKVAL( Opportunity.Opportunity_Names__c ,&quot;Listings/Photos/Syndication&quot;)


 
/* rebuilt to be more efficient by MJ ((ISPICKVAL( Opportunity.Opportunity_Names__c ,&quot;Account Setup&quot; )  || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Book&quot; )  || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Module&quot; ) || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Trial&quot; ) || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Window Stickers&quot; )) || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Real Deal&quot; ) )&amp;&amp; ( Product2.Name = &quot;Listings/Photos/Syndication&quot;)*/</errorConditionFormula>
        <errorMessage>Listings/Photos/Syndication needs to be in a separate opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vAuto_Real_Deal</fullName>
        <active>true</active>
        <description>Verify opportunity is for Real Deal only</description>
        <errorConditionFormula>(ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Account Setup&quot; )  || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Book&quot; )  || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Module&quot; ) || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Trial&quot; ) || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;TIM - With Training&quot; )|| ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;TIM - No Training&quot; ) || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Window Stickers&quot; )) &amp;&amp; ( Product2.Name = &quot;Real Deal&quot;)</errorConditionFormula>
        <errorMessage>Real Deal needs to be in a separate opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vAuto_Stockwave</fullName>
        <active>true</active>
        <description>vauto stockwave product can only have stockwave and SW standalone opp product suites.</description>
        <errorConditionFormula>(ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Account Setup&quot; )  || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Book&quot; )   || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Auction Genius - Stand  Alone&quot; )  || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Auction Genius - With Provision Client&quot;) ||
ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Listings/Photos/Syndication&quot; )   || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Module&quot; )   || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Real Deal&quot; )  ||    ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Trial&quot; )  || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Red Wagon&quot; )   || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;TIM - No Training&quot; )  || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;TIM - With Training&quot; )   || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Window Stickers&quot; )) &amp;&amp; (  BEGINS (Product2.Name, &quot;Stockwave&quot;))</errorConditionFormula>
        <errorMessage>The Stockwave products can only be added if the Opp Product Suite – Stockwave or Stockwave Stand Alone.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vAuto_Stockwave_Must_be_in_Separate_Opp</fullName>
        <active>true</active>
        <description>Verify opportunity is for Stockwave only</description>
        <errorConditionFormula>(ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Account Setup&quot; )  || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Auction Genius - Stand Alone&quot; )  || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Conquest&quot; )||
ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Auction Genius - With Provision Client&quot; )  ||
ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Autovisor - Stand Alone&quot; )  || 
ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Autovisor - With Provision Client&quot; )  ||
ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Book&quot; )  ||  
ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Module&quot; ) || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Trial&quot; ) || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;TIM - With Training&quot; )|| ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;TIM - No Training&quot; ) || 
ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Real Deal&quot; )  || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Window Stickers&quot; )) 

&amp;&amp; (CONTAINS(Product2.Name,&quot;Stockwave&quot;))</errorConditionFormula>
        <errorMessage>Stockwave Products need to be in a separate opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vAuto_Window_Stickers</fullName>
        <active>true</active>
        <description>verify opportunity is for Window Stickers</description>
        <errorConditionFormula>Product2.Name = &quot;Window Stickers&quot; &amp;&amp; !ISPICKVAL( Opportunity.Opportunity_Names__c ,&quot;Window Stickers&quot;) 

/*updated rule MJ(ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Account Setup&quot; )  || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Book&quot; )  || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Module&quot; ) || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Trial&quot; ) || ISPICKVAL(Opportunity.Opportunity_Names__c,&quot;Listings/Photos/Syndication&quot; )) &amp;&amp; ( Product2.Name = &quot;Window Stickers&quot;)*/</errorConditionFormula>
        <errorMessage>Please create a separate opportunity for window stickers :-)</errorMessage>
    </validationRules>
</CustomObject>